<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill" >

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_old_password"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_old"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_password"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm_new_password"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_enable_corner_16"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>
</RelativeLayout>