<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ContentDescription, UseCompoundDrawables">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/label_user_name"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:textColor="@color/textColorHeading"
            android:text="@string/label_user_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgFilter"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:layout_marginBottom="@dimen/define_dimen_16"/>

        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:textColor="@color/textColorHeading"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:textColor="@color/textColorHeading"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_change_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:textColor="@color/textColorHeading"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sign_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:textColor="@color/textColorHeading"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>